# kaggle_template

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.cpu  GEMINI.md  Makefile  README.md  compose.cpu.yaml  compose.yaml  pyproject.toml
.agents/commands/: kaggle-experiment.md  review.md  run-tests.md
.agents/docs/templates/: plan-template.md
.agents/skills/create-branch/: SKILL.md
.agents/skills/plan-create/: SKILL.md
.agents/skills/shared-agent-commands/: SKILL.md
.claude/commands/: command-create.md  kaggle-experiment.md  review.md  run-tests.md
.claude/skills/commit/: SKILL.md
.claude/skills/kaggle-fetch-competition/: SKILL.md
.claude/skills/kaggle-template/: SKILL.md
.claude/skills/kaggle-to-notion/: SKILL.md
.codex/: config.toml
.cursor/: mcp.json
.cursor/commands/: command-create.md  kaggle-experiment.md  review.md  run-tests.md
.cursor/rules/: project-guidelines.mdc
.gemini/: settings.json
.gemini/commands/: command-create.toml  kaggle-experiment.toml  review.toml  run-tests.toml
.github/: copilot-instructions.md
.github/prompts/: command-create.prompt.md  kaggle-experiment.prompt.md  review.prompt.md  run-tests.prompt.md
docs/: agent-integrations.md
experiments/exp000_sample/: run.py
notebook/: EDA01.ipynb  EDA01.py  EDA_subject.ipynb  train.ipynb
tests/: test_agent_assets.py  test_kaggle_fetch_competition_skill.py
tools/: check_submission.py  download_dataset.py  sync_agent_assets.py  upload_dataset.py  upload_model.py
utils/: env.py  logger.py  timing.py
(+18 files in other folders)
