[project]
name = "kaggle-template-isc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "dotenv>=0.9.9",
    "hydra-core>=1.3.2",
    "kaggle>=1.8.2",
    "matplotlib>=3.10.7",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "schedulefree>=1.4.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]
